<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSendMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/send_message"
        app:layout_constraintEnd_toStartOf="@+id/btnPutData"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/input_content"
        android:inputType="text"
        android:text="@string/test_data"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10948905" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/btnPutData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/put_data"
        app:layout_constraintBottom_toBottomOf="@+id/btnSendMsg"
        app:layout_constraintEnd_toStartOf="@+id/btnDelData"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSendMsg"
        app:layout_constraintTop_toTopOf="@+id/btnSendMsg" />

    <Button
        android:id="@+id/btnDelData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_data"
        app:layout_constraintBottom_toBottomOf="@+id/btnPutData"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPutData"
        app:layout_constraintTop_toTopOf="@+id/btnPutData" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/take_photo"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/btnDelData"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        app:layout_constraintBottom_toTopOf="@+id/btnSendPhoto"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/btnSendPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/send"
        app:layout_constraintBottom_toTopOf="@+id/btnDelPhoto"
        app:layout_constraintStart_toStartOf="@+id/btnTakePhoto"
        app:layout_constraintTop_toBottomOf="@+id/btnTakePhoto" />

    <Button
        android:id="@+id/btnDelPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/btnSendPhoto"
        app:layout_constraintTop_toBottomOf="@+id/btnSendPhoto" />

    <Button
        android:id="@+id/btnRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/request"
        app:layout_constraintEnd_toStartOf="@+id/tvResponse"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="btnDelPhoto,imageView"
        tools:layout_editor_absoluteY="731dp" />

    <TextView
        android:id="@+id/tvResponse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/try_to_request_something"
        app:layout_constraintBottom_toBottomOf="@+id/btnRequest"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnRequest"
        app:layout_constraintTop_toTopOf="@+id/btnRequest" />

</androidx.constraintlayout.widget.ConstraintLayout>